fixtures/invalid/bad-risk-level.lmk
@risk level="later"
Risk levels must stay in the fixed set.
